FIX: mailchimp logo on small screens

--- a/home/static/home/css/home.css
+++ b/home/static/home/css/home.css
@@ -189,3 +189,10 @@
   background-color: rgb(72, 72, 72) !important;
   color: #fff !important;
 }
+
+/* fix mailchimp logo  */
+@media screen and (max-width: 400px) {
+  #mc_embed_signup .foot {
+      grid-template-columns: 3fr 1fr !important;
+  }
+}
